# ml-pidog-gate_tuning

./: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.squad/: commit-message.txt  decisions.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/identity/: now.md  wisdom.md
logs/: infernce_REINFORCE_model.md
output/: checkpoint_ep1200.pt  checkpoint_ep1600.pt  checkpoint_ep2000.pt
output/26_04_04_1/: checkpoint_ep1200.pt  checkpoint_ep2000.pt  checkpoint_ep400.pt  checkpoint_final.pt
output/26_04_04_2/: checkpoint_ep1600.pt  checkpoint_ep800.pt
output/26_04_04_3/: checkpoint_ep1.pt  checkpoint_ep1200.pt  checkpoint_ep1600.pt  checkpoint_ep2.pt  checkpoint_ep2000.pt  checkpoint_ep400.pt  checkpoint_ep800.pt  checkpoint_final.pt
output/26_04_04_5/: checkpoint_ep1200.pt  checkpoint_ep1600.pt  checkpoint_ep2000.pt  checkpoint_ep400.pt  checkpoint_ep800.pt  checkpoint_final.pt
output/26_04_04_8/: checkpoint_ep100.pt  checkpoint_ep20.pt  checkpoint_ep40.pt  checkpoint_ep60.pt  checkpoint_ep80.pt  checkpoint_final.pt
output/26_04_04_9/: checkpoint_ep1200.pt  checkpoint_ep1600.pt  checkpoint_ep2000.pt  checkpoint_ep400.pt  checkpoint_ep800.pt  checkpoint_final.pt
output/ORI/: checkpoint_ep400.pt  checkpoint_ep800.pt  (+1 more)
pidog_rl/: __init__.py  config.py  env.py  infer.py  pidog_hw.py  policy.py  train.py  utils.py
reports/: comparison_report.md
scripts/: phase1_validation.py  phase2_analysis.py  phase2_validation.py  setup_pi.sh
(+19 files in other folders)
