[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-pidog-gate-tuning"
version = "0.1.0"
description = "Reinforcement-learning gait tuning for the SunFounder PiDog."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "torch==2.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pidog_rl*"]
